MDEV-18278 Misleading error message in error log upon failed table creation

If error_reported is not set upper caller open_table_from_share()
throws error ER_NOT_FORM_FILE itself via open_table_error().